ch15/pi/update/ingress-with-cache.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi
  namespace: default
  labels:
    kiamol: ch15
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "on" 
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 10m;
spec:
  rules:
  - host: pi.kiamol.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: pi-web
            port:
              number: 80
